...
                        "Bookmarks",
                        bundle: .toolkitModule,
                        comment: "A label in reference to bookmarks contained in a map or scene."
                    )
                    .font(.headline)
                    Text(
                        "Select a bookmark",
                        bundle: .toolkitModule,
                        comment: "A label prompting the user to make a selection from the available bookmarks."
                    )
                    .font(.subheadline)
                    .foregroundStyle(.secondary)
                }
...
